# moad_tools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  __pkg_metadata__.py  environment-dev.yaml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yaml  docs-linkcheck.yaml  pytest-coverage.yaml  pytest-no-midoss.yaml  pytest-with-coverage.yaml  sphinx-linkcheck.yaml  update-pixi-lockfile.yaml
docs/: Makefile  conf.py  index.rst  license_description.txt  moad_tools.rst  modules.rst  pkg_development.rst
envs/: environment-dev-graham.txt  environment-dev.yaml  environment-midoss.yaml  environment-rtd.yaml  environment-test-no-midoss.yaml  environment-test.yaml  environment-user.yaml  requirements.txt
moad_tools/: __about__.py  __init__.py  __pkg_metadata__.py  geo_tools.py  observations.py  places.py
moad_tools/midoss/: __init__.py  geotiff_watermask.py  hdf5_to_netcdf4.py  make_mohid_statistics.py  random_oil_spills.py
tests/: test_observations.py  test_random_oil_spills.py
tests/midoss/: test_geotiff_watermask.py  test_hdf5_to_netcdf4.py  test_random_oil_spills.py
tests/midoss/test_data/random_oil_spills/: all_2018_08.tif  fishing_2018_08.tif  oil_attribution.yaml  tanker_2018_08.tif
tests/test_data/random_oil_spills/: atb_2018_08.tif  barge_2018_08.tif  cargo_2018_08.tif  cruise_2018_08.tif  ferry_2018_08.tif  fuel_by_vessel.yaml  geotiff-watermask.npy  oil_attribution.yaml  other_2018_08.tif  smallpass_2018_08.tif
