# Copyright 2018 – present The UBC EOAS MOAD Group
# and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[metadata]
name = moad_tools
version = attr: moad_tools.__version__
description = UBC EOAS MOAD Group Tools Package
author = The UBC EOAS MOAD Group
author_email = dlatornell@eoas.ubc.ca
url = https://ubc-moad-tools.readthedocs.org/en/latest/
long_description = file: README.rst
license = Apache License, Version 2.0
platform = Linux
classifiers =
    Development Status :: 5 - Production
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    # see envs/environment-dev.yaml for conda environment dev installation
    # see envs/requirements.txt for versions most recently used in development
    arrow
    Click
    geopandas
    matplotlib
    netCDF4
    numpy
    pandas
    PyYAML
    rasterio
    scipy
    # PyTables
    tables
    xarray
    # moad_tools  # use python3 -m pip install --editable moad_tools/

[options.entry_points]
console_scripts =
    geotiff-watermask = moad_tools.midoss.geotiff_watermask:cli
    hdf5-to-netcdf4 = moad_tools.midoss.hdf5_to_netcdf4:cli
    random-oil-spills = moad_tools.midoss.random_oil_spills:cli
